WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213145
[iOS] Preferences are not being observed if the process pool is being created after activation
https://bugs.webkit.org/show_bug.cgi?id=213145
Summary
[iOS] Preferences are not being observed if the process pool is being created...
Per Arne Vollan
Reported
2020-06-12 13:36:13 PDT
If the app is creating the Web process pool after being activated, preferences will not be observed until the app is being backgrounded and then foregrounded again, since the preference observer is initialized when handling the app activation notification.
Attachments
Patch
(2.85 KB, patch)
2020-06-12 13:43 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.47 KB, patch)
2020-06-12 14:05 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
Patch
(1.90 KB, patch)
2020-06-12 14:26 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.04 KB, patch)
2020-06-12 14:29 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-06-12 13:36:43 PDT
rdar://problem/63720477
Per Arne Vollan
Comment 2
2020-06-12 13:43:26 PDT
Created
attachment 401774
[details]
Patch
Per Arne Vollan
Comment 3
2020-06-12 14:05:21 PDT
Created
attachment 401778
[details]
Patch
Brent Fulgham
Comment 4
2020-06-12 14:16:19 PDT
Comment on
attachment 401778
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401778&action=review
r=me
> Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:474 > + startObservingPreferenceChanges();
Do we need to do anything special to stop observing preferences in this case? Or is it handled automatically by the normal code paths?
Per Arne Vollan
Comment 5
2020-06-12 14:26:07 PDT
Created
attachment 401782
[details]
Patch
Per Arne Vollan
Comment 6
2020-06-12 14:29:12 PDT
Created
attachment 401783
[details]
Patch
Per Arne Vollan
Comment 7
2020-06-12 14:30:46 PDT
(In reply to Brent Fulgham from
comment #4
)
> Comment on
attachment 401778
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=401778&action=review
> > r=me > > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:474 > > + startObservingPreferenceChanges(); > > Do we need to do anything special to stop observing preferences in this > case? Or is it handled automatically by the normal code paths?
Actually, we will observe preference changes during the full lifetime of the UI process. Thanks for reviewing!
EWS
Comment 8
2020-06-12 15:38:31 PDT
Committed
r262984
: <
https://trac.webkit.org/changeset/262984
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401782
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug